...
        android:padding="16dp"
        android:background="#B3FFFFFF"
        android:layout_marginBottom="16dp"
        android:elevation="4dp">

        <EditText
            android:id="@+id/eventNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name"/>

        <EditText
            android:id="@+id/eventLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"/>

        <EditText
            android:id="@+id/eventDetailsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="Event Details" />

        <EditText
            android:id="@+id/eventDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Date (dd-MM-yyyy)"/>

        <EditText
            android:id="@+id/waitlistLimitEditText"
...
            android:layout_gravity="center_horizontal"
            android:src="@drawable/poster_placeholder" />

    </LinearLayout>

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Event"/>

    <Button
        android:id="@+id/backButtonFromCreateEvent"
...
