<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.OrganizerHomeView">

    <TextView
        android:id="@+id/welcomeMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="#8DFFFFFF"
        android:backgroundTintMode="add"
        android:text="Welcome back "
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/organizer_user_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#8DFFFFFF"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="poop" />

    <!-- Recycle view  for the events!!! -->

    <Button
        android:id="@+id/manageFacilityProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="Manage Facility"
        android:textSize="10sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:listitem="@layout/event_list_item"
         />


    <Button
        android:id="@+id/button_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="New Event" />

    <Button
        android:id="@+id/sendNotificationToAllEntrantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send To All" />

</LinearLayout>