...
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Delete Event" />

        <!-- Entrants Button -->
        <Button
            android:id="@+id/button_DetailViewEventLists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lists"
            android:layout_margin="8dp"/>

    </LinearLayout>
...
